Add jsonwebtoken stuff
