# server/src/controllers/user.controller.ts
@@ -1,12 +1,31 @@
 import { Route, Tags, Post, Body } from 'tsoa';
 import { User } from '../models';
-import { IVerifyUserPayload, verifyUser } from '../repositories/user.repository';
+import {
+    ILoginPayload,
+    loginUser,
+    registerUser,
+    LOGIN_STATUS,
+    IRegisterPayload,
+} from '../repositories/user.repository';
+
+export interface IUserResponse {
+    user: User | null;
+    accessToken: string | null;
+}
 
 @Route('users')
 @Tags('User')
 export default class UserController {
-    @Post('/verify')
-    public async verifyUser(@Body() body: IVerifyUserPayload): Promise<User | null> {
-        return verifyUser(body);
+    @Post('/login')
+    public async loginUser(@Body() body: ILoginPayload): Promise<IUserResponse> {
+        const result = await loginUser(body);
+
+        return result;
+    }
+    @Post('/register')
+    public async registerUser(@Body() body: IRegisterPayload): Promise<IUserResponse> {
+        const result = await registerUser(body);
+
+        return result;
     }
 }
